# prediction-market-interface

./: .coverage  .env  .env.example  .env.kalshi.example  .env.polymarket.example  .gitignore  .mcp.json  CLAUDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MCP_TOOLS_COVERAGE.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  SESSION_COMPLETE.md  SETUP.md  TESTING_SUMMARY.md  TESTS_READY.md  hello.py  pyproject.toml  pytest.ini  run_kalshi_mcp.py  run_kalshi_mcp_demo.py  run_kalshi_mcp_prod.py  run_polymarket_mcp.py
docs/: FASTMCP_TESTING_GUIDE.md  INTEGRATION_TESTING.md  PREDICTION-MARKETS-COMPARISON.md  kalshi-mcp-prd.md  polymarket-api-structure.md  polymarket-implementation-plan.md  polymarket-mcp-prd.md  polymarket-testing-via-claude-code.md
docs/gofastmcp/: changelog.md  index.md  updates.md
docs/historical/: BUG_FIXES_2025-11-03.md  README.md
docs/kalshi/: CLAUDE.md  README.md  changelog.md  fix.md  index.md  welcome.md
docs/polymarket/: index.md
journal/: CLAUDE.md
journal/polymarket/: 2025-11-05-phase1-completion.md  2025-11-05-phase2-completion.md  2025-11-05-phase2-scope.md
scripts/: rerecord_cassettes.sh
secrets/: kalshi_private_key.txt
src/kalshi/: __init__.py  client.py  kalshi_mcp_server.py  models.py  websocket_client.py
src/polymarket/: __init__.py  base_client.py  clob_client.py  gamma_client.py  models.py  polymarket_mcp_server.py
tests/: __init__.py  conftest.py
tests/cassettes/: .gitkeep  TestAPIErrorHandling.test_api_handles_invalid_parameters.yaml  TestAPIErrorHandling.test_api_handles_not_found_error.yaml  (+104 more)
(+461 files in other folders)
