[project]
name = "prediction-market-interface"
version = "0.1.0"
description = "LLM-powered interface for prediction markets with MCP support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.13.0.2",
    "pydantic>=2.12.3",
    "httpx>=0.28.0",
    "cryptography>=46.0.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "websockets>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-vcr>=1.0.2",
    "pytest-cov>=6.0.0",
    "pytest-watch>=4.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-vcr>=1.0.2",
    "pytest-watch>=4.2.0",
]
